Fix T74524: tooltip for smoke dissolve time is backwards